@@ -11,10 +11,10 @@ perl:
 install:
   - export RELEASE_TESTING=1 AUTOMATED_TESTING=1 AUTHOR_TESTING=1 HARNESS_OPTIONS=c HARNESS_TIMER=1
   - cpanm --quiet --notest Devel::Cover::Report::Coveralls
-  - cpanm --quiet --notest --installdeps .
+  - cpanm --quiet --notest --installdeps --with-develop .
 
 script:
-  - PERL5OPT=-MDevel::Cover=-coverage,statement,branch,condition,path,subroutine prove -lrsv t
+  - PERL5OPT=-MDevel::Cover='-coverage,statement,branch,condition,path,subroutine,+ignore,bin/prove\b,t/author' prove -lrsv t
   - cover
 
 after_success:
