@@ -4,13 +4,13 @@
       "Helmut Wollmersdorfer, <helmut.wollmersdorfer@gmail.com>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Milla version v1.0.4, Dist::Zilla version 5.015, CPAN::Meta::Converter version 2.141170",
+   "generated_by" : "Dist::Zilla version 5.034, Dist::Milla version v1.0.14, CPAN::Meta::Converter version 2.150001",
    "license" : [
       "perl_5"
    ],
    "meta-spec" : {
       "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
-      "version" : "2"
+      "version" : 2
    },
    "name" : "Set-Similarity-CosinePDL",
    "no_index" : {
@@ -26,11 +26,12 @@
    "prereqs" : {
       "configure" : {
          "requires" : {
-            "Module::Build::Tiny" : "0.036"
+            "Module::Build::Tiny" : "0.039"
          }
       },
       "develop" : {
          "requires" : {
+            "Dist::Milla" : "v1.0.14",
             "Test::Pod" : "1.41"
          }
       },
@@ -62,7 +63,8 @@
    },
    "version" : "0.010",
    "x_contributors" : [
-      "Helmut Wollmersdorfer <helmut@wollmersdorfer.at>"
+      "Helmut Wollmersdorfer <helmut@wollmersdorfer.at>",
+      "Helmut Wollmersdorfer <helmut.wollmersdorfer@fixpunkt.de>"
    ]
 }
 
